--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "vitest",
     "e2e": "cypress run",
     "lint": "eslint",
-    "ci:test": "vitest --no-watch && start-server-and-test dev http-get://0.0.0.0:5173 e2e"
+    "ci:test": "vitest --no-watch && start-server-and-test dev http://localhost:5173/ e2e"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
